добавлены изображения и спрайты

--- a/src/index.html
+++ b/src/index.html
@@ -1,53 +1,29 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title> Главная страница </title>
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-    <!-- Подключаем SlickSlider (не забудь подключить внизу страницы!)
-    <link href="css/slick.css" rel="stylesheet">
-    <link href="css/slick-theme.css" rel="stylesheet"> -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Главная</title>
+  <link rel="stylesheet" href="css/main.min.css">
 </head>
-<body>
+
+<body class="body-page">
 
 
+<header class="page-header">
+
+</header>
 
 
+<main class="page-main">
+
+</main>
 
 
+<footer class="page-footer">
 
+</footer>
 
-
-
-
-
-<!-- 
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-  <script type="text/javascript" src="js/slick.min.js"></script> -->
-
-  <script type="text/javascript">
-
-
-
-    // $('.slick-slider').slick({
-    //   autoplay: true,
-    //   arrows: false,
-    //   dots: true
-    // });
-
-
-  //   var mobMenuButton = $('.mobile-menu-button'),
-  //       mobMenuBlock = $('.mobile-menu-block');
-
-  //       $('.mobile-menu-button').on( 'click', function( event ) {
-  //         mobMenuBlock.toggleClass('mobile-menu-block--show');
-  // });
-
-
-
-  </script>
-</div>
 </body>
 </html>
