подключен font-awesome, готово меню и верхняя строка

--- a/src/index.html
+++ b/src/index.html
@@ -2,28 +2,75 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Главная</title>
-  <link rel="stylesheet" href="css/main.min.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Главная</title>
+	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body class="body-page">
 
 
-<header class="page-header">
+	<header class="page-header">
+		<div class="container-full full-color">
+			<div class="container-inner">
+				<div class="header-top-line flex-block">
+					<div class="custom-care">
+						<span class="custom-care__text">custom care:
+			  <a class="custom-care__number" href="tel:888234567">888-23-4567</a>
+			</span>
+					</div>
+					<div class="user-info flex-block">
+						<div class="header-top-line__currency">
+							<p> $ US <i class="fa fa-sort-desc" aria-hidden="true"></i></p>
+						</div>
+						<div class="header-top-line__account">
+							<span class="account-text">MY ACCOUNT</span>
+						</div>
+						<div class="header-top-line__search">
+							<span><i class="fa fa-search" aria-hidden="true"></i></span></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container-inner flex-block">
+			<div class="logo-and-menu">
+				<img class="logo" src="img/logo.png" alt="logo Lookshop">
+			</div>
+			<nav class="menu">
+				<ul class="menu-list">
+					<li class="menu-list__item">new<i class="fa fa-sort-desc" aria-hidden="true"></i></li>
+					<li class="menu-list__item">designers<i class="fa fa-sort-desc" aria-hidden="true"></i></li>
+					<li class="menu-list__item">women<i class="fa fa-sort-desc" aria-hidden="true"></i></li>
+					<li class="menu-list__item">men<i class="fa fa-sort-desc" aria-hidden="true"></i></li>
+					<li class="menu-list__item">clearence<i class="fa fa-sort-desc" aria-hidden="true"></i></li>
+				</ul>
+			</nav>
+			<div class="bucket-info">
+				<select name="your-cart" id="">
+					<option value="your-cart">Your cart</option>
+					<option value="your-cart">Your cart</option>
+					</select>
+				<div class="bucket-info__items">
+					<p class="bucket-info__items-text"><span>0</span> ITEMS</p>
+					<p class="bucket-info__items-money">$<span>0</span></p>
+				</div>
+			</div>
+		</div>
+		</div>
+	</header>
 
-</header>
+
+	<main class="page-main">
+
+	</main>
 
 
-<main class="page-main">
+	<footer class="page-footer">
 
-</main>
-
-
-<footer class="page-footer">
-
-</footer>
+	</footer>
 
 </body>
+
 </html>
